Better dayCalendar management

--- a/src/vois/vuetify/dayCalendarTest.ipynb
+++ b/src/vois/vuetify/dayCalendarTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66ac5c1e",
+   "id": "18bb5aa4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91dfcfa6",
+   "id": "27270e0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime, date\n",
+    "import dateutil.relativedelta\n",
+    "\n",
+    "%run dayCalendar.py\n",
+    "\n",
+    "output = widgets.Output()\n",
+    "display(output)\n",
+    "\n",
+    "\n",
+    "def on_click(day):\n",
+    "    with output:\n",
+    "        print('Clicked on ', day)\n",
+    "        \n",
+    "days = [\n",
+    "     '2023-10-07',\n",
+    "     '2023-10-07',\n",
+    "     '2023-10-10',\n",
+    "     '2023-10-10',\n",
+    "     '2023-10-17',\n",
+    "     '2023-10-27',\n",
+    "     '2023-10-22',\n",
+    "     '2023-10-22',\n",
+    "     '2023-10-25',\n",
+    "     '2023-11-04',\n",
+    "     '2023-11-04'\n",
+    "]\n",
+    "\n",
+    "start = '2023-10-07'\n",
+    "end   = '2023-11-07'\n",
+    "\n",
+    "c = dayCalendar(start=start, end=end, days=days, on_click=on_click)\n",
+    "display(c.draw())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df5bc742",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "761b8dd9",
+   "id": "d92139a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3650c4dd",
+   "id": "6d5226d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8b712c3",
+   "id": "b21ec0de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dbc1c44",
+   "id": "d06dc1b8",
    "metadata": {},
    "outputs": [],
    "source": []
