--- a/src/vois/vuetify/treeviewTest.ipynb
+++ b/src/vois/vuetify/treeviewTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e94e4cd9",
+   "id": "2df36a3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f60545f7",
+   "id": "33d5b074",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +31,15 @@
     "                                  substitutionDict={'A.1': 'A.1 new name'}, color='green', dark=False, width='500px', height='350px', on_change=on_change, on_activated=on_activated,\n",
     "                                  selectable=True, activatable=False, opened=['Root', 'A', 'A.3'], displayfullname=True, #active='A.2', \n",
     "                                  disabled=['A.1', 'A.3'], tooltips=True, tooltips_chars=0, iconsshow=True, iconscolor='green', open_on_click=True,\n",
-    "                                  iconsDict={'A.2': 'mdi-fire', 'A.4.1.2': 'mdi-anchor'}, iconsfolder=True, select_all=False, selected=['A.1.1','A.3.1','A.4.1.2','A.5.2.1'])\n",
+    "                                  iconsDict={'A.2': 'mdi-fire', 'A.4.1.2': 'mdi-anchor'}, iconsfolder=True, select_all=False, selected=['A.1.1','A.3.1','A.4.1.2','A.5.2.1'],\n",
+    "                                 ) #font_size=12, item_height=18, checkbox_size=20, icon_size=20)\n",
     "treecard"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feb0d60a",
+   "id": "d2c195ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19d20d98",
+   "id": "cc42f0d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a70ee671",
+   "id": "b59d7d6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66354070",
+   "id": "164fb652",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93f97e95",
+   "id": "ea690797",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52e39f19",
+   "id": "fad07d4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "600d7e62",
+   "id": "9e30b0d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5e3c036",
+   "id": "faf0bf40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8e9d6bf",
+   "id": "168a725e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4ef803a",
+   "id": "a6a15232",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92728e86",
+   "id": "f27d607d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52ad2c51",
+   "id": "6cfec90d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df025818",
+   "id": "c180bcfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "635ee97c",
+   "id": "e1f61fb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "976e5968",
+   "id": "2f7668e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf60be9b",
+   "id": "44cd739f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d00cb3b",
+   "id": "56fb3785",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27872d42",
+   "id": "ba4e9840",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -264,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06bb6917",
+   "id": "fcabc662",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b437555",
+   "id": "29c73779",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84080575",
+   "id": "dff4ad99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7df7166",
+   "id": "e8b80ba7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e307ba5",
+   "id": "1d8377cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2e82e5c",
+   "id": "7215d939",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad3a3164",
+   "id": "8382f7a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3e9ffb0",
+   "id": "3726678b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61e68b7a",
+   "id": "99d7fec5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5298faf",
+   "id": "a04477d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "671dbe1e",
+   "id": "5675f87e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "171d94cc",
+   "id": "587268c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0940404",
+   "id": "91fc1885",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b92d777",
+   "id": "ecdd40ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c0d4c92",
+   "id": "68ea21e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0651d167",
+   "id": "67540145",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dda06928",
+   "id": "ed4ac4c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9206f466",
+   "id": "6d3d50a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fcc4967",
+   "id": "b57790cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49518536",
+   "id": "cbf5d9b9",
    "metadata": {},
    "outputs": [],
    "source": []
