Added on_click_event param to dayCalendar widget

--- a/src/vois/vuetify/dayCalendarTest.ipynb
+++ b/src/vois/vuetify/dayCalendarTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18bb5aa4",
+   "id": "46a0a0e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,9 +17,13 @@
     "\n",
     "def on_click(day):\n",
     "    with out:\n",
-    "        print(day)\n",
+    "        print('  Day: ',day)\n",
     "\n",
-    "c = dayCalendar(start='2023-10-01', end='2023-10-31', days=['2023-10-10', '2023-10-20'], on_click=on_click)\n",
+    "def on_click_event(day):\n",
+    "    with out:\n",
+    "        print('Event: ',day)\n",
+    "        \n",
+    "c = dayCalendar(start='2023-10-01', end='2023-10-31', days=['2023-10-10', '2023-10-20'], on_click=on_click, on_click_event=on_click_event)\n",
     "\n",
     "display(c.draw())"
    ]
@@ -27,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27270e0a",
+   "id": "b35ba813",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df5bc742",
+   "id": "6b63d249",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d92139a5",
+   "id": "a7312d09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d5226d2",
+   "id": "a59aecf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b21ec0de",
+   "id": "1d5988f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d06dc1b8",
+   "id": "c49f9149",
    "metadata": {},
    "outputs": [],
    "source": []
