--- a/src/vois/vuetify/selectImageTest.ipynb
+++ b/src/vois/vuetify/selectImageTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0fd3b4d2",
+   "execution_count": 6,
+   "id": "43d9b3b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "00abbc547d764bbf9c28403084674057",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "selectImage(events=['input'], images=[{'name': 'Image 0', 'image': 'https://cdn.vuetifyjs.com/images/cards/pla…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cef7990f952f4b0a960c7467bf3d0e70",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import ipyvuetify as v\n",
     "\n",
@@ -30,7 +59,7 @@
     "\n",
     "s = selectImage(images=images, selection=1, onchange=onchange, \n",
     "                label='Please select an image from the list', \n",
-    "                max_height=44, dense=True, width=\"650px\",\n",
+    "                max_height=44, dense=True, width=\"450px\",\n",
     "                outlined=True, clearable=True, margins=\"ma-0 mt-2 mr-1\")\n",
     "\n",
     "display(s)\n",
@@ -40,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0c9d71b",
+   "id": "c35bd425",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fa011a38",
+   "execution_count": 2,
+   "id": "78b22ced",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6682cb5",
+   "id": "dc94ad2c",
    "metadata": {},
    "outputs": [],
    "source": []
