Added show_count in dayCalendar widget

--- a/src/vois/vuetify/dayCalendarTest.ipynb
+++ b/src/vois/vuetify/dayCalendarTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46a0a0e9",
+   "id": "f01cafdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "    with out:\n",
     "        print('Event: ',day)\n",
     "        \n",
-    "c = dayCalendar(start='2023-10-01', end='2023-10-31', days=['2023-10-10', '2023-10-20'], on_click=on_click, on_click_event=on_click_event)\n",
+    "c = dayCalendar(start='2023-10-01', end='2023-10-31', days=['2023-10-10', '2023-10-10', '2023-10-20'], show_count=True, on_click=on_click, on_click_event=on_click_event)\n",
     "\n",
     "display(c.draw())"
    ]
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b35ba813",
+   "id": "695aafa2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +65,14 @@
     "start = '2023-10-07'\n",
     "end   = '2023-11-07'\n",
     "\n",
-    "c = dayCalendar(start=start, end=end, days=days, on_click=on_click)\n",
+    "c = dayCalendar(start=start, end=end, days=days, show_count=True, on_click=on_click)\n",
     "display(c.draw())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b63d249",
+   "id": "120a9d41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7312d09",
+   "id": "87017b2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a59aecf8",
+   "id": "1887ae8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d5988f7",
+   "id": "97a86f7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c49f9149",
+   "id": "aa22e8b9",
    "metadata": {},
    "outputs": [],
    "source": []
