Added title and footer height in page widget

--- a/examples/Iris.ipynb
+++ b/examples/Iris.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c3db0ce7",
+   "execution_count": 1,
+   "id": "729fb3a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "742312128b9846b9a575ee1469c22293",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import widgets, Layout\n",
     "from vois.vuetify import page, selectSingle\n",
@@ -52,8 +67,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "cad3fd0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### ATTENZIONE SE LANCIATA LA MAINPAGE NON ESCE PERCHE' PENSA DI ESSERE IN BDAP SENZA ACCESSO A /eos!!!!!!!"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d19d43ff",
+   "id": "a737d903",
    "metadata": {},
    "outputs": [],
    "source": []
