--- a/src/vois/vuetify/cardTest.ipynb
+++ b/src/vois/vuetify/cardTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8ed173fa",
+   "execution_count": 1,
+   "id": "66056c12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d40cd1dcb84b4199bf9883590ebfed13",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "card(events=['clicked'], icon='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAQAAAAEACAYAAABccqhmAAAACXBIWXMAA…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ff4393cc26cd4d608e143766f8a34d29",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run card.py\n",
     "\n",
@@ -37,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "597e4e72",
+   "id": "f65656ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,10 +79,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6aaa0c2a",
+   "execution_count": 2,
+   "id": "517f941c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "74de0355732e41088935d77f8d1b3a5c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "card(backgroundimageurl='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAABU4AAACZCAIAAAB/pDefAAAALHRFWHRDcmVhdGl…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5313abd5e7224a9e91cbcbd052a443aa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Card with background image\n",
     "%run card.py\n",
@@ -79,10 +137,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "efb3c465",
+   "execution_count": 3,
+   "id": "470d4290",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2fb708b0bbfb44dbac5170228f90c797",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "card(events=['clicked'], height='350px', iconsize='0px', image='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "be4e0127fd0542f0a28e3a3917b815e7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Card with fixed height (TODO: add scrolling)\n",
     "%run card.py\n",
@@ -110,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f71feda5",
+   "id": "33d86e6c",
    "metadata": {},
    "outputs": [],
    "source": []
