--- a/src/vois/vuetify/menuTest.ipynb
+++ b/src/vois/vuetify/menuTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "daedbb1e",
+   "execution_count": 1,
+   "id": "37186f8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "707c06aaa8214974b7df429bce1c3f7b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Menu(children=[List(children=[ListItem(children=['Label1'], layout=None, style_='font-family: Roboto; font-wei…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "87dc6167347a4c7081b0043606f80bfb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(width='400px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run menu.py\n",
     "\n",
@@ -25,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35d3a7c2",
+   "id": "29bfc2a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fec2a536",
+   "id": "ad566aa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2990de9c",
+   "id": "da3c63eb",
    "metadata": {},
    "outputs": [],
    "source": []
