--- a/src/vois/vuetify/pageTest.ipynb
+++ b/src/vois/vuetify/pageTest.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "60122e56",
+   "execution_count": null,
+   "id": "080b1b2c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89d98736938f4f4e8705fc004b46072b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='0px', width='0px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipywidgets import widgets, Layout\n",
     "\n",
@@ -51,8 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9946f30c",
+   "execution_count": null,
+   "id": "963ea903",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +49,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98b562ac",
+   "id": "8c5b533f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ECL colours and look&feel\n",
+    "from ipywidgets import widgets, Layout\n",
+    "\n",
+    "output = widgets.Output(layout=Layout(width='0px', height='0px'))\n",
+    "display(output)\n",
+    "\n",
+    "def on_click():\n",
+    "    pass\n",
+    "\n",
+    "def on_delete(*args):\n",
+    "    pass\n",
+    "\n",
+    "%run page.py\n",
+    "\n",
+    "p = page('Application XYZ', 'Map page', output,\n",
+    "         titlecolor='#004494', titledark=True, titleheight=60,\n",
+    "         footercolor='#004494', footerdark=True, footerheight=40,\n",
+    "         #logoappurl='https://jeodpp.jrc.ec.europa.eu/services/shared/pngs/BDAP_Logo1024transparent.png', #logowidth=50,\n",
+    "         logocreditsurl='https://jeodpp.jrc.ec.europa.eu/services/shared/pngs/EC-JRC-logo_horizontal_EN_neg_transparent-background.png',\n",
+    "         on_logoapp=on_click, copyrighttext='European Commission - Joint Research Centre',\n",
+    "         show_back=True, show_help=True, on_help=on_click, show_credits=True, on_credits=on_click)\n",
+    "\n",
+    "p.customButtonAdd('mdi-delete', 'Click here to delete your registration', on_delete)\n",
+    "\n",
+    "card = p.create()\n",
+    "card.children = []\n",
+    "p.open()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3c7ba5a",
    "metadata": {},
    "outputs": [],
    "source": []
