--- a/src/vois/vuetify/popupTest.ipynb
+++ b/src/vois/vuetify/popupTest.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "42137944",
+   "execution_count": 1,
+   "id": "6319a241",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8f1cba8bad1c41d39cf104433ce05dc7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Menu(children=[Card(children=[Row(children=[Html(children=['Select a sector:'], class_='pa-0 ma-1', layout=Non…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Icon-only popup\n",
     "from vois.vuetify import treeview\n",
@@ -25,10 +40,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8b03a368",
+   "execution_count": 3,
+   "id": "e3102e0e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9705bab51c8248f68710ee19e34a1801",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Menu(children=[Card(children=[Row(children=[Html(children=['Select a sector:'], class_='pa-0 ma-1', layout=Non…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Text only popup\n",
     "from vois.vuetify import treeview\n",
@@ -40,7 +70,7 @@
     "                                           height='270px')\n",
     "\n",
     "p = popup(treecard, 'Sector',popupheight=270, buttonheight=34, margintop=0,\n",
-    "          open_on_hover=False, close_on_click=False, close_on_content_click=False, title='Select a sector:', show_close_button=True)\n",
+    "          open_on_hover=True, close_on_click=False, close_on_content_click=False, title='Select a sector:', show_close_button=True)\n",
     "\n",
     "p.draw()"
    ]
@@ -48,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91cab660",
+   "id": "81a08bd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +107,95 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef620557",
+   "id": "d2243c4b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ade4680",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7132431e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5b71d122",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7cee3d85fdc044fdabdf3c6d8ac6e476",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Menu(children=[Card(children=[Row(children=[Html(children=['Select a sector:'], class_='pa-0 ma-1', layout=Non…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "27c12184226d44f5ac7cb0b488caec9f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Manage events\n",
+    "from vois.vuetify import treeview\n",
+    "import ipywidgets as widgets\n",
+    "\n",
+    "output = widgets.Output()\n",
+    "\n",
+    "\n",
+    "def onmenu(widget, event, data):\n",
+    "    with output:\n",
+    "        print(data)\n",
+    "\n",
+    "\n",
+    "%run popup.py\n",
+    "\n",
+    "treecard = treeview.createTreeviewFromList(['S%d'%x for x in range(10)],\n",
+    "                                           rootName='All',\n",
+    "                                           height='270px')\n",
+    "\n",
+    "p = popup(treecard, 'Sector',popupheight=270, buttonheight=34, margintop=0,\n",
+    "          open_on_hover=True, close_on_click=False, close_on_content_click=False, title='Select a sector:', show_close_button=True)\n",
+    "\n",
+    "p.menu.on_event('input', onmenu)\n",
+    "\n",
+    "\n",
+    "display(p.draw())\n",
+    "display(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97bf9eb8",
    "metadata": {},
    "outputs": [],
    "source": []
