Added value property to basemaps widget

--- a/src/vois/vuetify/basemapsTest.ipynb
+++ b/src/vois/vuetify/basemapsTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3507c89",
+   "id": "0fbc8dd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad8676a4",
+   "id": "5a54ebdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b4100bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b.value = 'Esri.WorldImagery'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "447d4942",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b.value = 'BDAP.Elevation.Merit'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd93da43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1016cace",
+   "id": "e4453149",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1404e4d7",
+   "id": "a9d737b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21ca593a",
+   "id": "e6a72f04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6b34811",
+   "id": "a8b56c84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3911472d",
+   "id": "faa79e99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "602afd6e",
+   "id": "09041ae1",
    "metadata": {},
    "outputs": [],
    "source": []
