Added documentation on textpopup

--- a/docs/3.1_referenceGeneral.rst
+++ b/docs/3.1_referenceGeneral.rst
@@ -133,6 +133,14 @@ svgUtils module
 
 .. image:: figures/line.png
 
+textpopup module
+----------------
+
+.. automodule:: textpopup
+    :members:
+
+.. image:: figures/textpopup.png
+
 treemapPlotly module
 --------------------
 
