--- a/docs/3.1_referenceGeneral.rst
+++ b/docs/3.1_referenceGeneral.rst
@@ -139,7 +139,7 @@ textpopup module
 .. automodule:: textpopup
     :members:
 
-.. image:: figures/textpopup.png
+.. image:: figures/line.png
 
 treemapPlotly module
 --------------------
