Added persistent flag in page and custom_icon in dialogGeneric

--- a/src/vois/vuetify/dialogGenericTest.ipynb
+++ b/src/vois/vuetify/dialogGenericTest.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "7240e7be",
+   "execution_count": 9,
+   "id": "d796d3ae",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13f1aa51d973490d9bd63414237c8603",
+       "model_id": "2269c9093f044bd99e0935255340cd50",
        "version_major": 2,
        "version_minor": 0
       },
@@ -42,12 +42,17 @@
     "def on_cancel():\n",
     "    print(\"Exit with cancel\")\n",
     "    \n",
+    "def on_custom():\n",
+    "    print(\"Clicked custom icon\")\n",
+    "    dlg.close()\n",
+    "    \n",
     "s = switch.switch(True, 'PNG format', onchange=on_s_change)\n",
     "    \n",
     "dlg = dialogGeneric(title='Settings', text='Please select the format for download:', show=True,\n",
     "                    addclosebuttons=False, width=\"20vw\", persistent=True, #dark=True, \n",
     "                    addokcancelbuttons=True, on_ok=on_ok, on_cancel=on_cancel,\n",
-    "                    fullscreen=False, content=[s.draw()], output=output)\n",
+    "                    fullscreen=False, content=[s.draw()], output=output,\n",
+    "                    custom_icon='mdi-open-in-new', custom_tooltip='Open document in new browser tab', custom_icon_onclick=on_custom)\n",
     "\n",
     "dlg.okdisabled = True"
    ]
@@ -55,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e656932b",
+   "id": "86eb98f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8db69651",
+   "id": "b9b5b226",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,10 +79,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "076e18fa",
+   "execution_count": 10,
+   "id": "afe6ea23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9bf3378cfaf24417b951d3f1d7868847",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<style>\\n.bottomleftdialog {\\n    position: absolute;\\n    bottom: 0;\\n    left: 0;\\n}\\n</style>…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Example of a dialog positioned on the bottom left side of the screen: use customclass!\n",
     "\n",
@@ -100,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3ed39460",
+   "id": "b42a4993",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "038ee7c3",
+   "id": "0f038484",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e143aa3e",
+   "id": "66d76baa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa9fa4b0",
+   "id": "5533a3e1",
    "metadata": {},
    "outputs": [],
    "source": []
