--- a/src/vois/vuetify/pageTest.ipynb
+++ b/src/vois/vuetify/pageTest.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "080b1b2c",
+   "execution_count": 1,
+   "id": "c04bb940",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c13edbc47d684e3ebaab70fd1f6015de",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import widgets, Layout\n",
     "\n",
@@ -37,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "963ea903",
+   "id": "ac13a4ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c5b533f",
+   "id": "a508db8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3c7ba5a",
+   "id": "de9aa227",
    "metadata": {},
    "outputs": [],
    "source": []
