Addec clearable parameter to palettePickerEx

--- a/src/vois/vuetify/palettePickerExTest.ipynb
+++ b/src/vois/vuetify/palettePickerExTest.ipynb
@@ -2,39 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "4d0743ac",
+   "execution_count": null,
+   "id": "6e78d370",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e64b3851c49640ab86d23556924cc794",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48b533f75cf74a83a5a702ab59812b44",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Html(children=[Select(background_color='white', chips=False, class_='pa-0 mx-0 my-1 mb-n4', cle…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run palettePickerEx.py\n",
     "\n",
@@ -47,14 +18,14 @@
     "    with output:\n",
     "        print(colors,interpolate)\n",
     "\n",
-    "p = palettePickerEx(width=150, value='Turbo', interpolate=False, show_interpolate_switch=False, onchange=onchange)\n",
+    "p = palettePickerEx(width=150, value='Turbo', interpolate=False, show_interpolate_switch=False, clearable=False, onchange=onchange)\n",
     "p.draw()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7e767c9",
+   "id": "987c7043",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40ebfb21",
+   "id": "6b34115c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1504cc5",
+   "id": "c851ab42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bf454b5",
+   "id": "5dbed469",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -93,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1715381",
+   "id": "8e8fe6c4",
    "metadata": {},
    "outputs": [],
    "source": []
