Replaced 2022 in test notebooks

--- a/src/vois/vuetify/footerTest.ipynb
+++ b/src/vois/vuetify/footerTest.ipynb
@@ -3,12 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "264dd123",
+   "id": "6c6faf5b",
    "metadata": {},
    "outputs": [],
    "source": [
     "from ipywidgets import widgets, Layout, HTML\n",
     "from IPython.display import display\n",
+    "from datetime import datetime\n",
     "\n",
     "output = widgets.Output(layout=Layout(width='99.7%', min_width='99.7%', height='78px'))\n",
     "display(output)\n",
@@ -25,7 +26,7 @@
     "    print('CREDITS')\n",
     "    \n",
     "# Footer with custom buttons\n",
-    "f = footer(text='2022 - Joint Research Centre', color='lightgrey',\n",
+    "f = footer(text='%d - Joint Research Centre'%(datetime.now().year), color='lightgrey',\n",
     "           minipanelicons=['fa-truck', 'mdi-heart', 'mdi-magnify'], minipaneltooltips=['Function 1', 'Function 2', 'Function 3'], \n",
     "           minipanellarge=True, minipanelopen=True, onclickminipanel=onclickminipanel,\n",
     "           #footercredits='Data credits', footercreditstooltip='Eurostat - European Commission', onclickcredits=onclickcredits,\n",
@@ -33,7 +34,7 @@
     "           height=68, marginy=2, onclick=onclick, output=output)\n",
     "\n",
     "# Footer with only a \"copyright\" message\n",
-    "f = footer(text='2022 - Joint Research Centre', color='lightgrey',\n",
+    "f = footer(text='%d - Joint Research Centre'%(datetime.now().year), color='lightgrey',\n",
     "           minipanelicons=['fa-truck', 'mdi-heart', 'mdi-magnify'], minipaneltooltips=['Function 1', 'Function 2', 'Function 3'],\n",
     "           minipanellarge=False, minipanelopen=False, minipanelbuttoncolor='red', onclickminipanel=onclickminipanel,\n",
     "           footercredits='Data credits', footercreditstooltip='Eurostat - European Commission', onclickcredits=onclickcredits,\n",
@@ -47,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa754794",
+   "id": "1afa0a21",
    "metadata": {},
    "outputs": [],
    "source": []
