Replaced 2022 in examples notebooks

--- a/examples/notebooks/vuetify/footer.ipynb
+++ b/examples/notebooks/vuetify/footer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e2f0285b",
+   "id": "21ec3a4c",
    "metadata": {},
    "source": [
     "### Examples: footer module"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54587219",
+   "id": "d2ad733d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,7 @@
     "from vois.vuetify import footer\n",
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
+    "from datetime import datetime\n",
     "\n",
     "output = widgets.Output()\n",
     "display(output)\n",
@@ -35,7 +36,7 @@
     "    with output:\n",
     "        print('CREDITS')\n",
     "\n",
-    "f = footer.footer(text='2022 - Joint Research Centre', color='lightgrey',\n",
+    "f = footer.footer(text='%d - Joint Research Centre'%(datetime.now().year), color='lightgrey',\n",
     "                  minipanelicons=['fa-truck', 'mdi-heart', 'mdi-magnify'],\n",
     "                  minipaneltooltips=['Function 1', 'Function 2', 'Function 3'],\n",
     "                  minipanellarge=True, minipanelopen=True,\n",
@@ -52,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8fd408e",
+   "id": "ead8868b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -74,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
