Addressed popup double opening

--- a/src/vois/vuetify/popupTest.ipynb
+++ b/src/vois/vuetify/popupTest.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6319a241",
+   "execution_count": 10,
+   "id": "5a073636",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f1cba8bad1c41d39cf104433ce05dc7",
+       "model_id": "bb98930b293b405ea3a3b6046fd9c343",
        "version_major": 2,
        "version_minor": 0
       },
@@ -33,21 +33,21 @@
     "\n",
     "p = popup(treecard, '', icon='mdi-car', popupheight=270, icon_small=False, icon_large=False, \n",
     "          rounded=True, outlined=False, margintop=0, text=True, buttonwidth=34, buttonheight=34, \n",
-    "          open_on_hover=False, close_on_click=False, close_on_content_click=False, title='Select a sector:', show_close_button=True)\n",
+    "          open_on_hover=True, close_on_click=False, close_on_content_click=False, title='Select a sector:', show_close_button=True)\n",
     "\n",
     "p.draw()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "e3102e0e",
+   "execution_count": 11,
+   "id": "bbbec26c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9705bab51c8248f68710ee19e34a1801",
+       "model_id": "3c70380bce074d0d99990c85ce380e03",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81a08bd8",
+   "id": "05057e3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2243c4b",
+   "id": "82f05c00",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ade4680",
+   "id": "7f1c1813",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7132431e",
+   "id": "242319b9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5b71d122",
+   "id": "0085b768",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97bf9eb8",
+   "id": "b7f31a6f",
    "metadata": {},
    "outputs": [],
    "source": []
