Added cssUtils module in general package

--- a/src/vois/vuetify/popupTest.ipynb
+++ b/src/vois/vuetify/popupTest.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "8682588d",
+   "execution_count": 3,
+   "id": "2391ec2d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80ba0f6f44d941d082a38c616c60cb72",
+       "model_id": "581f001f256f473fab5e5ad15b3507ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -33,15 +33,25 @@
     "\n",
     "p = popup(treecard, '', icon='mdi-car', popupheight=270, icon_small=False, icon_large=False, \n",
     "          rounded=True, outlined=False, margintop=0, text=True, buttonwidth=34, buttonheight=34, \n",
-    "          open_on_hover=True, close_on_click=False, close_on_content_click=False, title='Select a sector:', show_close_button=True)\n",
+    "          open_on_hover=False, close_on_click=False, close_on_content_click=False, title='Select a sector:', show_close_button=True)\n",
     "\n",
     "p.draw()"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "55768884",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.menu.v_model = False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
-   "id": "8fda23eb",
+   "id": "5e0bf388",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26d9b4b6",
+   "id": "b03a61ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16f99b6e",
+   "id": "9f47264c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -115,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2286ca45",
+   "id": "046e29b4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -123,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d12ccf85",
+   "id": "0c96b91c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -131,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b10adcb5",
+   "id": "7a83a88f",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0f426e9",
+   "id": "510990b8",
    "metadata": {},
    "outputs": [],
    "source": []
